# Practice

pr12/: README.md  pyproject.toml
pr12/src/pr12/: main.py
project11/: README.md  poem.txt  pyproject.toml
project11/src/project11/: main.py  main1.py
project11/src/project11/crews/dev_crew/: dev_crew.py
project11/src/project11/crews/dev_crew/config/: agents.yaml  tasks.yaml
